fixes missing padding on legacy tables

--- a/pages/table.module.scss
+++ b/pages/table.module.scss
@@ -32,7 +32,7 @@
   letter-spacing: 0.4px;
   font-weight: 500;
   font-size: 11px;
-  font-family: "Mono";
+  font-family: 'Mono';
   overflow: hidden;
   text-overflow: ellipsis;
   background: rgba(0, 0, 0, 0.1);
@@ -50,6 +50,7 @@
   max-width: 1px;
   transition: 200ms ease all;
   background: #fff;
+  padding: 8px 8px 8px 14px;
 }
 
 .cta {
@@ -71,7 +72,7 @@
 }
 
 .tdbutton {
-  font-family: "Mono";
+  font-family: 'Mono';
   text-transform: uppercase;
   box-shadow: 0 1px 4px rgba(0, 0, 0, 0.07);
   cursor: pointer;
